[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/default.theme" type="Theme" id=1]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=3]
[ext_resource path="res://Lobby/LobbyBackground.tscn" type="PackedScene" id=4]

[node name="Lobby" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="LobbyBackground" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 16.0
margin_right = -1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 42.0
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 288.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 281.0
margin_right = 742.0
margin_bottom = 242.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_right = 125.0
margin_bottom = 42.0
text = "Name"
align = 2

[node name="NameTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_right = 461.0
margin_bottom = 42.0
rect_min_size = Vector2( 320, 0 )
text = "Player"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 50.0
margin_right = 125.0
margin_bottom = 92.0
text = "IP"
align = 2

[node name="IPTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_top = 50.0
margin_right = 461.0
margin_bottom = 92.0
rect_min_size = Vector2( 320, 0 )
text = "127.0.0.1"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 100.0
margin_right = 125.0
margin_bottom = 142.0
text = "Port"
align = 2

[node name="PortTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_top = 100.0
margin_right = 461.0
margin_bottom = 142.0
rect_min_size = Vector2( 320, 0 )
text = "32032"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="HostButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 150.0
margin_right = 125.0
margin_bottom = 192.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_top = 150.0
margin_right = 461.0
margin_bottom = 192.0
text = "Join Game"

[node name="TeamLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 200.0
margin_right = 125.0
margin_bottom = 242.0
text = "Team"
align = 2

[node name="TeamCheck" type="CheckButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 141.0
margin_top = 200.0
margin_right = 461.0
margin_bottom = 242.0
text = "Cop Mode"
align = 2

[node name="WaitingRoom" parent="." groups=[
"WaitingRoom",
] instance=ExtResource( 3 )]
theme = ExtResource( 1 )

[node name="Label" parent="WaitingRoom/VBoxContainer" index="0"]
margin_bottom = 42.0

[node name="CenterContainer" parent="WaitingRoom/VBoxContainer" index="1"]
margin_top = 46.0
margin_bottom = 134.0

[node name="ItemList" parent="WaitingRoom/VBoxContainer/CenterContainer" index="0"]
margin_top = 44.0
margin_bottom = 44.0
items = [ "Player 1", null, false, "Player 2", null, false ]
[connection signal="text_changed" from="VBoxContainer/CenterContainer/GridContainer/NameTextBox" to="." method="_on_NameTextBox_text_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="toggled" from="VBoxContainer/CenterContainer/GridContainer/TeamCheck" to="." method="_on_TeamCheck_toggled"]
[connection signal="pressed" from="WaitingRoom/VBoxContainer/ReadyButton" to="." method="_on_ReadyButton_pressed"]

[editable path="WaitingRoom"]
